--- a/GiveLife-frontend/src/app/components/cupons/cupons.component.css
+++ b/GiveLife-frontend/src/app/components/cupons/cupons.component.css
@@ -1,6 +1,6 @@
-app-cupon {
+/* app-cupon {
     display: inline-block;
     justify-content: center;
     padding-left: 2.5rem;
     padding-right: 2.5rem;
-}
+} */
