--- a/GiveLife-frontend/src/app/components/home-page/home-page.component.html
+++ b/GiveLife-frontend/src/app/components/home-page/home-page.component.html
@@ -79,8 +79,12 @@
                         <div class="tolargefont">
 
 
-                            <h1 class="card-title ">
-                                We Can Help Someone
+                            <h1 class="card-title " style="padding-left: 5px;">
+                                <span style="font-size: 80px;">Giving</span> 
+                                <br>
+                                is the greatest act of 
+                                <br>
+                                <span style="font-size: 80px; color: #DC3545; padding-left: 160px;">Grace</span>
                             </h1>
                             <!-- <button class="btn" id="div5">Donate</button> -->
                         </div>
@@ -143,7 +147,8 @@
         </div>
     </div>
 </div>
-<div id="photoscards">
+<!-- <div id="photoscards">
+    
     <div class="row text-center text-lg-center">
 
         <div class=" col-md-2 ">
@@ -179,7 +184,7 @@
 
     </div>
 
-</div>
+</div> -->
 
 <div class="container">
 
