--- a/GiveLife-frontend/src/app/components/header/header.component.css
+++ b/GiveLife-frontend/src/app/components/header/header.component.css
@@ -1,4 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Mitr:wght@300&family=Roboto+Slab&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Mitr:wght@300&family=Roboto+Slab&display=swap');
+
+*{
+    font-family: 'Mitr', sans-serif;
+}
+
 nav {
     padding: 7px;
 }
@@ -11,15 +18,57 @@ nav {
     grid-area: 3 / 3 / 4 / 4;
     margin-top: 0px;
     padding: 10px;
-    border: 1px #F74F22 solid;
+    border: 1px #FC756C solid;
     border-radius: 30px;
     outline: none;
     width: 100%;
     height: 45%;
     border: 1px;
     border-radius: 30px;
-    background-color: #F74F22;
+    background-color: #FC756C;
     font-weight: normal;
     color: white;
     font-size: large;
+}
+
+.pesronicon:hover{
+    border: 2px #DC3545 solid;
+    border-radius: 25%;
+}
+
+.dropdown-toggle{
+    color: #DC3545 !important;
+}
+
+
+.donate {
+    /* width: 100%;
+    height: 55px; */
+    border: 1px;
+    border-radius: 30px;
+    background-color: #DC3545;
+    font-weight: lighter;
+    color: white;
+    font-size: larger;
+    /* margin-top: 20px; */
+}
+
+
+.donate:hover {
+    background-color: white;
+    border: 1px solid #DC3545;
+    color: #DC3545;
+    transition: 0.7s;
+}
+
+
+
+
+
+svg{
+    stroke:#DC3545 !important;
+    stroke-linecap: round !important;
+    stroke-width:2 !important;
+    /* color: chartreuse !important; */
+
 }
