--- a/GiveLife-frontend/src/app/components/sign-up/sign-up.component.css
+++ b/GiveLife-frontend/src/app/components/sign-up/sign-up.component.css
@@ -27,8 +27,8 @@ h2{
     margin-right: auto;  */
     margin-top:60px ;
     background-color: #fff;
-border-radius: 5px;
-box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    border-radius: 15px;
 width: 50%;
 margin-left: auto;
     margin-right: auto;
@@ -43,7 +43,7 @@ margin-left: auto;
     margin-bottom: 15px;
     border-radius:30px;
     background-color: white;
-    border-color: #F74F22;
+    border-color: #DC3545;
     border-width: 1px;
     width: 70%;
     margin-left: 15%;
@@ -70,12 +70,13 @@ margin-left: auto;
     margin-left: 15%;
     margin-right: 15%;
     border-radius:30px;
-    background-color: #F74F22;
+    background-color: #DC3545;
     font-weight: bold;
     border-radius:30px;
     border-width: 3px;
-    border-color: white;
+    /* border-color: white; */
     color: black;
+    outline: none;
 }
 /* #submit:hover{
     border-radius:30px;
