--- a/GiveLife-frontend/src/app/components/post/post.component.html
+++ b/GiveLife-frontend/src/app/components/post/post.component.html
@@ -1,261 +1,166 @@
-<main class="container-fluid pb-3 flex-grow-1 d-flex flex-column flex-sm-row overflow-auto">
-    <div class="row flex-grow-sm-1 flex-grow-0">
-        <!-- <div class="col-sm-3 flex-grow-sm-1 flex-shrink-1 flex-grow-0 sticky-top pb-sm-0 pb-3">
-            <div class="bg-light border rounded-3 p-1 h-100 sticky-top">
-                <h6 class="d-none d-sm-block text-muted">Filter Posts</h6>
+<div class="container">
+  <div class="filterTable">
+    <a>
+        <a class="need">Category : </a>
+        <div style="margin-left: 10px;"
+          class="categoryFilter"
+          *ngFor="let item of [0, 1, 2, 3]; let i = index"
+        >
+          <input
+            type="checkbox"
+            value="{{ item }}"
+            [checked]="selected1 === i"
+            (change)="selected1 = i"
+            (change)="onChangeCat($event)"
+          />
 
-                <div *ngFor="let item of [0,1,2,3];  let i = index">
-                    <input type="checkbox" value="{{item}}" [checked]="selected1 === i" (change)="selected1 = i"
-                        (change)=" onChangeCat($event)">
-
-                    <ul class="nav nav-pills flex-sm-column flex-row mb-auto justify-content-between text-truncate">
-                        <li class="nav-item">
-                            <a href="#" class="nav-link px-2 text-truncate">
-                                <i class="bi bi-house fs-4"></i>
-                                <span class="d-none d-sm-inline" *ngIf="item==0">Food</span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#" class="nav-link px-2 text-truncate">
-                                <i class="bi bi-speedometer fs-4"></i>
-                                <span class="d-none d-sm-inline" *ngIf="item==1">Medicine</span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#" class="nav-link px-2 text-truncate"><i class="bi bi-card-text fs-4"></i>
-                                <span class="d-none d-sm-inline" *ngIf="item==2">Money</span> </a>
-                        </li>
-                        <li>
-                            <a href="#" class="nav-link px-2 text-truncate"><i class="bi bi-bricks fs-4"></i>
-                                <span class="d-none d-sm-inline" *ngIf="item==3">Cloths</span> </a>
-                        </li>
-                    </ul>
-                </div>
-
-                <div *ngFor="let item of [500,2000,3000];  let i = index">
-                    <input type="checkbox" value="{{item}}" [checked]="selected === i" (change)="selected = i"
-                        (change)=" onChange($event)">{{item}}
-                </div>
-            </div>
-        </div> -->
-
-        <!--  -->
-        <!--  -->
-        <!--  -->
-        <div class="container">
-
-
-
-            <div class="sidenav">
-                <h4 >Filter Posts</h4>
-
-                <a>
-                    <div class="categoryFilter" *ngFor="let item of [0,1,2,3];  let i = index">
-                        <input type="checkbox" value="{{item}}" [checked]="selected1 === i" (change)="selected1 = i"
-                            (change)=" onChangeCat($event)">
-
-                            <a class="a" *ngIf="item==0"> Food</a>
-                            <a class="a" *ngIf="item==1"> Medicine</a>
-                            <a class="a" *ngIf="item==2"> Money</a>
-                            <a class="a" *ngIf="item==3"> Cloths</a>
-                    </div>
-                </a>
-                <br>
-                <a>
-                    <div class="categoryFilter" *ngFor="let item of [500,2000,3000];  let i = index">
-                        <input type="checkbox" value="{{item}}" [checked]="selected === i" (change)="selected = i"
-                            (change)=" onChange($event)"><a class="a"> {{item}}</a>
-                    </div>
-                </a>
-            </div>
-
-
-
-
-            <div class=" d-flex flex-row justify-content-around flex-wrap p-5">
-
-
-                
-
-                <div class="card align-self-between p-3 mb-5" style="width:30%" *ngFor="let item of postsArray">
-                    <form class="card-details ">
-                        <div class="form-group">
-
-                            <div class="row">
-                                <div id="d23" class="col">
-                                    <p>{{item.postTxt}}</p>
-                                </div>
-                            </div>
-                            <hr>
-                            <div class="row">
-                                <div id="d11" class="col">
-                                    <p class="need ">Need Category</p>
-
-                                </div>
-                                <div id="d13" class="col">
-                                    <p class="need">Required Amount</p>
-
-                                </div>
-                                <div id="d12" class="col">
-                                    <p class="need">Rest Amount</p>
-                                </div>
-
-                            </div>
-                            <div class="row">
-                                <div id="d11" class="col">
-
-                                    <p class="text-dark " *ngIf="item.needCatogry==0">Food</p>
-                                    <p class="text-dark " *ngIf="item.needCatogry==1">Medicine</p>
-                                    <p class="text-dark " *ngIf="item.needCatogry==2">Money</p>
-                                    <p class="text-dark " *ngIf="item.needCatogry==3">Cloths</p>
-
-                                </div>
-                                <div id="d13" class="col">
-                                    <p class="text-dark  ">{{item.requiredAmount}}</p>
-
-                                </div>
-                                <div id="d12" class="col">
-                                    <p class="text-dark  ">{{item.restAmount}}</p>
-                                </div>
-
-                            </div>
-                            <div class="row">
-                                <div class="col">
-                                    <div class="div5"><button type="submit"
-                                            (click)="opendonateform(donateform,item.postId)">
-                                            Donate <i>♥</i> </button></div>
-                                </div>
-                            </div>
-                        </div>
-
-                    </form>
-                </div>
-            </div>
+          <a class="a" *ngIf="item == 0"> Food</a>
+          <a class="a" *ngIf="item == 1"> Medicine</a>
+          <a class="a" *ngIf="item == 2"> Money</a>
+          <a class="a" *ngIf="item == 3"> Cloths</a>
         </div>
+    </a><br>
+    <hr style="width: 50%; margin-left: 25%;"/>
+    <a>
+        <a class="need">Amount : </a>
+        <div style="margin-left: 15px;"
+          class="categoryFilter"
+          *ngFor="let item of [500, 2000, 3000]; let i = index"
+        >
+          <input
+            type="checkbox"
+            value="{{ item }}"
+            [checked]="selected === i"
+            (change)="selected = i"
+            (change)="onChange($event)"
+          /><a class="a element"> 0-{{ item }} </a>
+        </div>
+    </a>
+  </div>
 
-        <!-- <div class="col overflow-auto h-100" style="background-color: black;">
-            <div class="bg-light border rounded-3 p-3">
-                <div class="container mx-auto" *ngFor="let item of postsArray">
-                    <div class="container mx-auto">
-                        <div class="card " style="width: 24rem; height:19rem;">
-                            <form class="card-details ">
-                                <div class="form-group">
-
-                                    <div class="row">
-                                        <div id="d23" class="col">
-                                            <p>{{item.postTxt}}</p>
-                                        </div>
-                                    </div>
-                                    <hr>
-                                    <div class="row">
-                                        <div id="d11" class="col">
-                                            <p class="need ">Need Category</p>
-
-                                        </div>
-                                        <div id="d13" class="col">
-                                            <p class="need">Required Amount</p>
-
-                                        </div>
-                                        <div id="d12" class="col">
-                                            <p class="need">Rest Amount</p>
-                                        </div>
-
-                                    </div>
-                                    <div class="row">
-                                        <div id="d11" class="col">
-
-                                            <p class="text-dark " *ngIf="item.needCatogry==0">Food</p>
-                                            <p class="text-dark " *ngIf="item.needCatogry==1">Medicine</p>
-                                            <p class="text-dark " *ngIf="item.needCatogry==2">Money</p>
-                                            <p class="text-dark " *ngIf="item.needCatogry==3">Cloths</p>
-
-                                        </div>
-                                        <div id="d13" class="col">
-                                            <p class="text-dark  ">{{item.requiredAmount}}</p>
-
-                                        </div>
-                                        <div id="d12" class="col">
-                                            <p class="text-dark  ">{{item.restAmount}}</p>
-                                        </div>
-
-                                    </div>
-                                    <div class="row">
-                                        <div class="col">
-                                            <div class="div5"><button type="submit"
-                                                    (click)="opendonateform(donateform,item.postId)">
-                                                    Donate <i>♥</i> </button></div>
-                                        </div>
-                                    </div>
-                                </div>
-
-                            </form>
-                        </div>
-
-                    </div>
-
-                </div>
-
+  <div class="d-flex flex-row justify-content-around flex-wrap p-5">
+    <div
+      id="card"
+      class="card align-self-between mt-0 p-3 mb-5"
+      *ngFor="let item of postsArray"
+    >
+      <form class="card-details">
+        <div class="form-group">
+          <div>
+            <p>{{ item.postTxt }}</p>
+          </div>
+          <hr />
+          <div>
+            <div>
+              <span class="need">Need Category : </span>
+              <span class="text-dark" *ngIf="item.needCatogry == 0">Food</span>
+              <span class="text-dark" *ngIf="item.needCatogry == 1"
+                >Medicine</span
+              >
+              <span class="text-dark" *ngIf="item.needCatogry == 2">Money</span>
+              <span class="text-dark" *ngIf="item.needCatogry == 3"
+                >Cloths</span
+              >
             </div>
-        </div> -->
+            <div>
+              <span class="need">Required Amount : </span>
+              <span class="text-dark">{{ item.requiredAmount }}</span>
+            </div>
+            <div>
+              <span class="need">Rest Amount : </span>
+              <span class="text-dark">{{ item.restAmount }}</span>
+            </div>
+          </div>
 
-
-
-
-
-
-        <!--  -->
-        <!--  -->
-        <!--  -->
-        <!--  -->
+          <button
+            type="submit"
+            (click)="opendonateform(donateform, item.postId)"
+          >
+            Donate <i>♥</i>
+          </button>
+        </div>
+      </form>
     </div>
-</main>
+  </div>
+</div>
 
-
+<!--  -->
+<!--  -->
+<!--  -->
+<!--  -->
 
 <ng-template #donateform let-modal>
-    <div class="modal-header">
-        <h4 class="modal-title" id="modal-basic-title">
-            Step of Help
-        </h4>
-        <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+  <div class="modal-header">
+    <h4 class="modal-title" id="modal-basic-title">Step of Help</h4>
+    <button
+      type="button"
+      class="close"
+      aria-label="Close"
+      (click)="modal.dismiss('Cross click')"
+    >
+      <span aria-hidden="true"> × </span>
+    </button>
+  </div>
 
-            <span aria-hidden="true">
-                ×
-            </span>
-        </button>
-    </div>
-
-    <!-- model -->
-    <div class="modal-body">
-        <form name="donateform" #donateform="ngForm" (ngSubmit)="donateToPost(Amount.value)">
-
-            <div class="row">
-                <div class="col-md">
-                    <div class="parent">
-                        <br>
-                        <div class="div2">
-                            <input class="form-control" name="Amount" #Amount [(ngModel)]="donnation.Amount"
-                                placeholder="Donated Amount.." required pattern="^[0-9]*$">
-                        </div>
-                        <br>
-                        <div class="alert alert-warning" role="alert"
-                            *ngIf="donateform.controls.Amount?.touched && donateform.controls.Amount.errors">
-
-                            <span *ngIf="donateform.controls.Amount.errors.required"> donnation is required</span>
-                            <span *ngIf="donateform.controls.Amount.errors.pattern">enter valid amount of money</span>
-                        </div>
-                        <br>
-                        <div class="alert alert-warning" role="alert" *ngIf="customError.flag">
-                            <span>{{customError.serverError}}</span>
-
-                        </div>
-                        <br> <button class="div5 " type=" submit "
-                            [disabled]="donateform.invalid==true&&customError.flag==false">Donate <i>♥</i> </button>
-
-                    </div>
-                </div>
+  <!-- model -->
+  <div class="modal-body">
+    <form
+      name="donateform"
+      #donateform="ngForm"
+      (ngSubmit)="donateToPost(Amount.value)"
+    >
+      <div class="row">
+        <div class="col-md">
+          <div class="parent">
+            <br />
+            <div class="div2">
+              <input
+                class="form-control"
+                name="Amount"
+                #Amount
+                [(ngModel)]="donnation.Amount"
+                placeholder="Donated Amount.."
+                required
+                pattern="^[0-9]*$"
+              />
             </div>
-
-        </form>
-    </div>
+            <br />
+            <div
+              class="alert alert-warning"
+              role="alert"
+              *ngIf="
+                donateform.controls.Amount?.touched &&
+                donateform.controls.Amount.errors
+              "
+            >
+              <span *ngIf="donateform.controls.Amount.errors.required">
+                donnation is required</span
+              >
+              <span *ngIf="donateform.controls.Amount.errors.pattern"
+                >enter valid amount of money</span
+              >
+            </div>
+            <br />
+            <div
+              class="alert alert-warning"
+              role="alert"
+              *ngIf="customError.flag"
+            >
+              <span>{{ customError.serverError }}</span>
+            </div>
+            <br />
+            <button
+              class="div5"
+              type=" submit "
+              [disabled]="
+                donateform.invalid == true && customError.flag == false
+              "
+            >
+              Donate <i>♥</i>
+            </button>
+          </div>
+        </div>
+      </div>
+    </form>
+  </div>
 </ng-template>
