--- a/GiveLife-frontend/src/app/components/home-page/home-page.component.html
+++ b/GiveLife-frontend/src/app/components/home-page/home-page.component.html
@@ -80,11 +80,11 @@
 
 
                             <h1 class="card-title " style="padding-left: 5px;">
-                                <span style="font-size: 80px;">Giving</span> 
+                                <span style="font-size: 80px; color: #DC3545;">Giving</span> 
                                 <br>
-                                is the greatest act of 
+                                <span style="padding-left: 90px;">is the greatest act of </span>
                                 <br>
-                                <span style="font-size: 80px; color: #DC3545; padding-left: 160px;">Grace</span>
+                                <span style="font-size: 80px; color: #DC3545; padding-left: 180px;">Grace</span>
                             </h1>
                             <!-- <button class="btn" id="div5">Donate</button> -->
                         </div>
