--- a/GiveLife-frontend/src/app/components/post/post.component.css
+++ b/GiveLife-frontend/src/app/components/post/post.component.css
@@ -1,58 +1,68 @@
 @import url('https://fonts.googleapis.com/css2?family=Mitr:wght@300&family=Roboto+Slab&display=swap');
-button:not(.close) {
-    width: 100%;
-    height: 55px;
-    border: 1px;
+
+@import url('https://fonts.googleapis.com/css2?family=Mitr:wght@300&family=Roboto+Slab&display=swap');
+
+*{
+    font-family: 'Mitr', sans-serif;
+}
+
+button{
+    margin-top: 20px;
+    margin-left: 25%;
+    /* align-items: center; */
+    /* margin: auto auto; */
+    width: 50%;
+    height: 38px;
     border-radius: 30px;
+    border: none;
     background-color: #DC3545;
     font-weight: normal;
     color: white;
     font-size: large;
-    margin-top: 20px;
 }
 
 button:hover {
-    font-size: larger;
-    font-weight: bold;
     background-color: white;
-    border: 2px solid #DC3545;
+    border: 1px solid #DC3545;
     color: #DC3545;
     transition: 0.7s;
 }
 
+.card{
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    border-radius: 15px;
+}
+
 body {
-    /* background: linear-gradient(to right, rgba(235, 224, 232, 1) 52%, rgba(254, 191, 1, 1) 53%, rgba(254, 191, 1, 1) 100%); */
     font-family: 'Roboto', sans-serif
 }
 
-.card {
-    margin: 10px;
-    display: grid;
-    border-radius: 5px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+.filterTable{
+    margin: auto;
+    /* border: 1px #DC3545 solid; */
+    margin-top: 40px;
+    padding: 10px 25px;
     border-radius: 15px;
-    margin: 50px 0 50px;
-    padding: 15px;
-    padding-bottom: 10px !important
+    text-align: center;
+    width: 60%;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
 }
 
 .need {
     color: #DC3545;
-}
-
-h4{
-    color: rgb(118,118,118);
+    text-decoration: none;
 }
 
 .a{
     color: rgb(118,118,118);
     text-decoration: none;
-    cursor: pointer;
+    /* cursor: auto; */
 }
-
-/* a:hover{
-    color: #DC3545;
-} */
+.element{
+    color: rgb(118,118,118);
+    text-decoration: none;
+    /* cursor: auto; */
+}
 
 .categoryFilter{
     display: inline-block;
@@ -60,43 +70,18 @@ h4{
 
 }
 
+#card{
+    width: 30%;    
+}
 
+@media only screen and (max-width: 993px) {
+    #card{
+        width: 45%;    
+    }
+}
 
-
-/* side bar */
-/* 
-.sidenav {
-    margin-top: 76px;
-    height: 100%;
-    width: 160px;
-    position: fixed;
-    z-index: 1;
-    top: 0;
-    left: 0;
-    background-color: #F8F9FA;
-    overflow-x: hidden;
-    padding-top: 20px;
-  }
-  
-  .sidenav a {
-    padding: 6px 8px 6px 16px;
-    text-decoration: none;
-    font-size: 10px;
-    color: #818181;
-    display: block;
-  }
-  
-  .sidenav a:hover {
-    color: #DC3545;
-  }
-  .main {
-    margin-left: 160px;
-    font-size: 28px; 
-    padding: 0px 10px;
-  }
-  @media screen and (max-height: 450px) {
-    .sidenav {padding-top: 15px;}
-    .sidenav a {font-size: 18px;}
-  } */
-
-  /* end of sidebar */
+@media only screen and (max-width: 768px) {
+    #card{
+        width: 90%;    
+    }
+}
