--- a/GiveLife-frontend/src/app/components/posts/posts.component.css
+++ b/GiveLife-frontend/src/app/components/posts/posts.component.css
@@ -1,4 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Mitr:wght@300&family=Roboto+Slab&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Mitr:wght@300&family=Roboto+Slab&display=swap');
+
+*{
+    font-family: 'Mitr', sans-serif;
+}
+
 .div5 {
     grid-area: 3 / 3 / 4 / 4;
     margin-top: 0px;
@@ -58,9 +65,9 @@ body {
     margin-right: 15%;
 }
 
-app-post {
+/* app-post {
     display: inline-block;
     justify-content: center;
     padding-left: 1rem;
     padding-right: 1rem;
-}
+} */
